--- a/tail/index.html
+++ b/tail/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Navbar</title>
+    <title>tailwind Spice Delight</title>
     <link rel="stylesheet" href="./output.css">
   </head>
   <body class="bg-gray-100">
